# VP-tree-MNIST

./: CMakeLists.txt  EDA_trabajo_final.cpp  EDA_trabajo_final.h  Enlace al dataset.txt  Readme.txt
